--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -4,10 +4,7 @@
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 @section HeaderScript{
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3imid37BAw2_Uwsw59RjLw8DRJuGCbEc&callback=initMap">
-    </script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
     <script>
         var delivery_position;
         let map, infoWindow, _pos, marker;
@@ -36,7 +33,13 @@
         }
 
         function initMap() {
-            current_position = { lat: parseFloat(_pos.latitude.toFixed(5)), lng: parseFloat(_pos.longitude.toFixed(5)) };
+            if (_pos == undefined) {
+                //setear posicion por defecto
+                //current_position = { lat: parseFloat(_pos.latitude.toFixed(5)), lng: parseFloat(_pos.longitude.toFixed(5)) };
+            } else {
+                current_position = { lat: parseFloat(_pos.latitude.toFixed(5)), lng: parseFloat(_pos.longitude.toFixed(5)) };
+            }
+            
 
             map = new google.maps.Map(document.getElementById("map"), {
                 center: current_position,
@@ -196,8 +199,12 @@
     }
 </style>
 @section Scripts{
-    
+
     <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
     <script src="~/js/order/notify.js" type="text/javascript"></script>
     <script src="~/js/order/checkout.js" type="text/javascript"></script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3imid37BAw2_Uwsw59RjLw8DRJuGCbEc&callback=initMap">
+    </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 } 
