--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -67,8 +67,8 @@ nav button{
 }
 
 nav .logo{
-    padding: 22px 20px;
-    height: 80px;
+    /*padding: 22px 20px;*/
+    /*height: 80px;*/
     float: left;
     text-align: center;
     font-size: 24px;
