se permite eliminar productos del carrito

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -28,7 +28,7 @@
             </div>
             <h5 class="text-center">Mi Pedido</h5>
             <hr class="separator" />
-            <label>SUBTOTAL: $<span id="subtotal-cart"></span></label>
+            <label>TOTAL: $<span id="subtotal-cart"></span></label>
             <button onclick='window.location = "@Url.Action("Index", "Cart")"' class="btn btn-block back-primary" id="btn_order">ORDENAR</button>
             <button class="btn btn-secondary btn-block" id="btn_empty_cart">VACIAR CARRITO</button>
             <hr />
