--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div id="wrap_order_detail" class="table-responsive">
                 <div id="wrap_order_detail" class="table-responsive">
-                    <table class="table table-hover" id="tbl_order">
+                    <table class="table table-hover table-striped" id="tbl_order">
                         <thead class="bg-black text-white">
                             <tr>
                                 <th>PRODUCTO</th>
