--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/About.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/About.cshtml
@@ -22,4 +22,9 @@
             <p>0994467731 - 052 733112</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-6 offset-md-6 pb-5">
+            <a href="/Home" class="btn back-primary btn-block">IR AL INICIO</a>
+        </div>
+    </div>
 </div>
