ajustes responsive en flujo de pedido hecho por el cliente

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -5,8 +5,8 @@
 }
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container" style="min-height:80vh">
-    <div class="row my-5">
-        <div class="offset-1 col-lg-10 col-md-10 col-sm-12">
+    <div class="row my-4">
+        <div class="offset-lg-1 offset-md-1 col-lg-10 col-md-10 col-sm-12 col-xs-12">
             <div class="card p-3">
                 <div class="card-body">
                     <h2>Estamos preparando tu pedido</h2>
