--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Verification.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Verification.cshtml
@@ -5,7 +5,7 @@
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container" style="min-height:80vh">
     <div class="row my-5">
-        <div class="offset-lg-2 col-lg-8 offset-md-2 col-md-8 col-sm-12">
+        <div class="offset-lg-2  col-lg-8 offset-md-2 col-md-8 col-sm-12 col-xs-12">
             <div class="card p-3">
                 <div class="card-body">
                     <h2>Hemos enviado un código de verificación a tu correo electrónico</h2>
