--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -27,6 +27,8 @@
 
         const updateOrdersTable = () => {
             getOrderList();
+            console.log('SI ESTOY ACTUALIZANDO');
+            console.log(order_list);
             tbl_order_list.clear().rows.add(order_list).draw();
         }
     </script>
