se crea diseño base de pagìna nuevo usuario

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -119,6 +119,10 @@
                         <label for="identification">Cédula</label>
                         <input id="identification" name="identification" type="text" class="form-control effect-8 numbers" minlength="10" maxlength="10" required />
                     </div>
+                     <div class="form-group col-xs-12 col-md-6">
+                        <label for="email">Correo electrónico</label>
+                        <input id="email" name="email" type="email" class="form-control" minlength="5" required />
+                    </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-xs-12 col-md-6">
