--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Neutrinodevs.PedidosOnline.Domain.Entities.Usuarios> 
+﻿@model List<Neutrinodevs.PedidosOnline.Domain.DTOs.User.UserMainDto> 
 @{
     ViewData["Title"] = "Usuarios";
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
@@ -7,8 +7,10 @@
 
 <div style="margin-top: 3rem; padding: 3rem" class="panel panel-default">
     <h1 style="padding-bottom: 3rem;">Usuarios</h1>
-    <div class="row">
-
+    <div class="row " style="margin-bottom: 3rem">
+        <div class="col-xs-12 col-md-12">
+            <a href="/User/New" class="btn btn-primary ">Nuevo</a>
+        </div>
     </div>
     <div class="table-responsive">
         <table class="table table-hover table-striped" id="tbl_users">
@@ -32,7 +34,7 @@
                         <td>@user.TipoUsuario</td>
                         <td>@user.Nombres</td>
                         <td><button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button></td>
-                        <td><button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button></td>
+                        @*<td><button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button></td>*@
                     </tr>
                 }
             </tbody>
