--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
@@ -20,8 +20,8 @@
                     <th scope="col">Usuario</th>
                     <th scope="col">Rol</th>
                     <th scope="col">Nombres</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
+                    @*<th scope="col"></th>
+                    <th scope="col"></th>*@
                 </tr>
             </thead>
             <tbody>
@@ -33,7 +33,7 @@
                         <td>@user.Username</td>
                         <td>@user.TipoUsuario</td>
                         <td>@user.Nombres</td>
-                        <td><button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button></td>
+                        @*<td><button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button></td>*@
                         @*<td><button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button></td>*@
                     </tr>
                 }
