--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/New.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/New.cshtml
@@ -2,65 +2,68 @@
     ViewData["Title"] = "Nuevo Usuario";
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
-<div class="container">
-    <div class="row " style="margin-top: 4rem">
-        <div class="col-md-12 col-xs-12">
-            
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3>Nuevo Usuario</h3>
-                </div>
-                <div class="panel-body">
-                    @using (Html.BeginForm("New", "User", FormMethod.Post, new { id = "frmUser", @class = "pr-4" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <div class="row">
-                            <div class="form-group col-xs-12 col-md-4 ">
-                                <label for="identification">Cédula</label>
-                                <input id="identification" name="identification" type="text" class="form-control effect-8 numbers" minlength="10" maxlength="10" required />
-                            </div>
-                             <div class="form-group col-xs-12 col-md-4">
-                                <label for="name">Nombres</label>
-                                <input id="name" name="name" class="form-control letters" minlength="3" required />
-                            </div>
-                            <div class="form-group col-xs-12 col-md-4">
-                                <label for="last_name">Apellidos</label>
-                                <input id="last_name" name="last_name" type="text" class="form-control letters" minlength="3" required />
-                            </div>
+<div class="row " style="margin-top: 4rem">
+    <div class="col-md-12 col-xs-12">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3>Nuevo Usuario</h3>
+            </div>
+            <div class="panel-body">
+                @using (Html.BeginForm("New", "User", FormMethod.Post, new { id = "frmUser", @class = "pr-4" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="row">
+                        <div class="form-group col-xs-12 col-md-4 ">
+                            <label for="identification">Cédula</label>
+                            <input id="identification" name="identification" type="text" class="form-control effect-8 numbers" minlength="10" maxlength="10" required />
                         </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 col-md-6">
-                                <label for="email">Correo electrónico</label>
-                                <input id="email" name="email" type="email" class="form-control" minlength="5" required />
-                            </div>
-                            <div class="form-group col-xs-12 col-md-6">
-                                <label for="sel_role">Seleccione Rol</label>
-                                <select class="form-control" id="id_role">
-                                    <option value="4">Administrador</option>
-                                    <option value="3">Repartidor</option>
-                                </select>
-                            </div>
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="name">Nombres</label>
+                            <input id="name" name="name" class="form-control letters" minlength="3" required />
                         </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 col-md-4">
-                                <label for="user">Usuario</label>
-                                <input id="user" name="user" type="text" class="form-control" minlength="6" maxlength="20" required />
-                            </div>
-                            <div class="form-group col-xs-12 col-md-4">
-                                <label for="passsword">Contraseña</label>
-                                <input id="password" name="password" type="password" class="form-control" minlength="5" required />
-                            </div>
-                            <div class="form-group col-xs-12 col-md-4">
-                                <label for="passsword2">Confirmar contraseña</label>
-                                <input id="passsword2" name="passsword2" data-rule-equalTo="#password" type="password" class="form-control" minlength="5" required />
-                            </div>
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="last_name">Apellidos</label>
+                            <input id="last_name" name="last_name" type="text" class="form-control letters" minlength="3" required />
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn back-primary btn-block">Crear</button>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="email">Correo electrónico</label>
+                            <input id="email" name="email" type="email" class="form-control" minlength="5" required />
                         </div>
-                    }
-                </div>
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="sel_role">Seleccione Rol</label>
+                            <select class="form-control" id="sel_role">
+                                <option value="4">Administrador</option>
+                                <option value="3">Repartidor</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="user">Usuario</label>
+                            <input id="user" name="user" type="text" class="form-control" minlength="6" maxlength="20" required />
+                        </div>
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="passsword">Contraseña</label>
+                            <input id="password" name="password" type="password" class="form-control" minlength="5" required />
+                        </div>
+                        <div class="form-group col-xs-12 col-md-4">
+                            <label for="passsword2">Confirmar contraseña</label>
+                            <input id="passsword2" name="passsword2" data-rule-equalTo="#password" type="password" class="form-control" minlength="5" required />
+                        </div>
+                    </div>
+                    <div class="row text-right">
+                        <div class="col-xs-12 col-md-4 ">
+                            <button type="submit" class="btn btn-success btn-block">Crear usuario</button>
+                        </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/js/user/user.js"></script>
+}
